--- a/index.html
+++ b/index.html
@@ -11,6 +11,8 @@
     <h2>Miles Davis</h2>
     <h2>John Coltrane</h2>
     <h2>David Brubeck</h2>
+
+    <h3>Regier Atrium</h3>
   </body>
 
 </html>
