--- a/index.html
+++ b/index.html
@@ -13,6 +13,11 @@
     <h2>David Brubeck</h2>
 
     <h3>Regier Atrium</h3>
+    <h3>September 10, 2019</h3>
+    <h3>7:00 p.m.</h3>
+    <h3>Reserve Seating $15</h3>
+    <h4>Tabor College Music Department</h4>
+    <h4>Fall Concert Series</h4>
   </body>
 
 </html>
